# actix-otel-example

./: .env  Cargo.toml  README.md  app.toml  compose.yml  otel-collector-config.yaml  otel-collector-contrib-config.yaml
src/: lib.rs  main.rs  telemetry.rs
src/api/: mod.rs
src/middleware/: metrics.rs  tracing.rs
