[package]
name = "actix-otel-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-opentelemetry = {  version = "0.19.0", features = ["metrics"] }
once_cell = "1.20.2"
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = { version = "0.27.0", features = ["metrics"] }
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
opentelemetry = { version = "0.26.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.26.0", features = ["tls", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-stdout = "0.26.0"
opentelemetry-semantic-conventions = "0.26.0"

[dev-dependencies]
tracing-test = "0.2.5"